--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@
   }
 
   .headline {
-    background-image: url('/img/bg-img.jpeg');
+    background-image: url('/img/bkimag.png');
     background-repeat: no-repeat;
     width: 100%;
     display: flex;
@@ -81,15 +81,18 @@
     padding: 20px;
     font-size: 14px;
     line-height: 25px;
+    color: #272831;
   }
 
   .date {
     font-weight: bold;
-    font-size: 36px;
+    font-size: 34px;
+    color: #272831;
   }
 
   .venue {
     margin: 10px 0 50px 0;
+    color: #272831;
   }
 
   .main-program {
@@ -103,13 +106,20 @@
     width: 85%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 50px 0;
   }
 
   .main-event-details h2 {
-    color: #fff;
+    color: #d3d3d3;
     align-self: center;
-    margin-bottom: 40px;
+  }
+
+  .main-event-details hr {
+    margin-bottom: 30px;
+    margin-top: 10px;
+    width: 10%;
+    border: solid 1px #ec5242;
   }
 
   .program {
@@ -145,11 +155,12 @@
   .details h2,
   p {
     margin-bottom: 10px;
+    color: #272831;
   }
 
   .program p {
     margin: 10px 0;
-    color: #fff;
+    color: #d3d3d3;
     line-height: 20px;
     font-size: 13px;
     text-align: start;
@@ -160,7 +171,7 @@
     padding: 50px;
     background-color: #ec5242;
     color: #fff;
-    margin: 50px 70px 0 70px;
+    margin: 50px 0;
     text-align: center;
     text-decoration: none;
   }
@@ -179,6 +190,7 @@
 
   .speakers .member {
     margin-top: 50px;
+    color: #272831;
   }
 
   .grid {
@@ -298,6 +310,16 @@
 
   .menu-link {
     text-decoration: none;
+    color: #272831;
+  }
+
+  .menu-link:active {
+    color: #ec5242;
+  }
+
+  .menu-link:hover {
+    color: #ec5242;
+    border-bottom: solid 2px #ec5242;
   }
 
   .campaign1 {
@@ -311,7 +333,7 @@
   }
 
   .headline {
-    background-image: url('/img/bg-img.jpeg');
+    background-image: url('/img/bkimag.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -321,7 +343,7 @@
   .headline-details {
     padding: 0 0 0 150px;
     margin-top: 150px;
-    width: 55%;
+    width: 70%;
     display: flex;
     flex-direction: column;
   }
@@ -333,22 +355,31 @@
   }
 
   .headline-description {
-    margin: 50px 0;
-    border: solid 1px #d3d3d3;
+    margin: 20px 0;
+    border: solid 3px #fff;
+    width: 65%;
   }
 
   .headline-lead {
     padding: 20px;
     font-size: 14px;
     line-height: 25px;
+    color: #272831;
+  }
+
+  .date {
+    color: #272831;
+    font-size: 30px;
   }
 
   .venue {
     margin: 10px 0 50px 0;
+    color: #272831;
   }
 
   .main-program {
-    background-color: rgb(0, 0, 0);
+    background-image: linear-gradient(rgba(40, 43, 50, 0.9), rgba(40, 43, 50, 0.9)), url('/img/program.jpg');
+    background-size: cover;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -358,13 +389,20 @@
     width: 85%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 50px 0;
   }
 
   .main-event-details h2 {
-    color: #fff;
+    color: #d3d3d3;
     align-self: center;
+  }
+
+  .main-event-details hr {
     margin-bottom: 40px;
+    margin-top: 10px;
+    width: 5%;
+    border: solid 1px #ec5242;
   }
 
   .program {
@@ -376,7 +414,7 @@
   .program li {
     text-align: center;
     width: 100%;
-    background-color: rgba(48, 36, 36, 0.5);
+    background-color: #272731ad;
     padding: 15px;
   }
 
@@ -396,17 +434,18 @@
   .details h2,
   p {
     margin-bottom: 10px;
+    color: #272831;
   }
 
   .program p {
     margin: 10px 0;
-    color: #fff;
+    color: #d3d3d3;
     line-height: 20px;
     font-size: 13px;
   }
 
   .ds-program {
-    color: #fff;
+    color: #d3d3d3;
     margin-top: 50px;
     text-align: center;
   }
@@ -425,6 +464,7 @@
 
   .speakers .member {
     margin-top: 50px;
+    color: #272831;
   }
 
   .grid {
@@ -501,6 +541,10 @@
     width: 100%;
     display: flex;
     justify-content: center;
+  }
+
+  .footer-details p {
+    color: #272831;
   }
 
   .footer-container {
