--- a/css/index.css
+++ b/css/index.css
@@ -333,7 +333,7 @@
   }
 
   .headline {
-    background-image: url('/img/bkimag.png');
+    background-image: url('../img/bkimag.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -378,7 +378,7 @@
   }
 
   .main-program {
-    background-image: linear-gradient(rgba(40, 43, 50, 0.9), rgba(40, 43, 50, 0.9)), url('/img/program.jpg');
+    background-image: linear-gradient(rgba(40, 43, 50, 0.9), rgba(40, 43, 50, 0.9)), url('../img/program.jpg');
     background-size: cover;
     width: 100%;
     display: flex;
