--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@
   }
 
   .headline {
-    background-image: url('/img/bkimag.png');
+    background-image: url('../img/bkimag.png');
     background-repeat: no-repeat;
     width: 100%;
     display: flex;
@@ -96,7 +96,7 @@
   }
 
   .main-program {
-    background-color: rgb(0, 0, 0);
+    background-image: linear-gradient(rgba(40, 43, 50, 0.9), rgba(40, 43, 50, 0.9)), url('../img/program.jpg');
     width: 100%;
     display: flex;
     justify-content: center;
