updated the image path

--- a/css/about.css
+++ b/css/about.css
@@ -472,7 +472,7 @@
   }
 
   .summit-2 {
-    background-image: url('../img/summit2.jpg');
+    background-image: url('../img//summit2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     width: 350px;
